bindings/HSP/Samples/Audio_PlaySound.hsp
//=============================================================================
// ■ Audio_PlaySound
//-----------------------------------------------------------------------------
//	選択したファイルを切れ目なくループ再生します。
//=============================================================================

#include "lumino.as"

	// midi を使用する場合はコメントを外してください
	//LNConfig_SetDirectMusicMode LN_DIRECTMUSICMODE_NORMAL
	//LNConfig_SetUserWindowHandle hwnd
	
	// 音声機能を初期化する
	LNApplication_InitializeAudio
	if stat != LN_OK : end	// error

	// ファイルを選択する
	dialog "wav;*.ogg;*.mp3;*.mid", 16
	if stat == 0 : end

	// 音声ファイルから Sound オブジェクトを作る
	LNSound_Create refstr, sound
	LNSound_SetVolume sound, 1.0			// 音量
	LNSound_SetPitch sound, 1.0				// ピッチ
	LNSound_SetLoopEnabled sound, LN_TRUE	// ループON
	
	// 再生
	LNSound_Play sound
	
	// サウンドオブジェクトを削除する
	//LNObject_Release sound

	stop
